# exercism-exercises

./: .gitignore  README.md
crystal/hello-world/: flake.nix
elixir/parallel-letter-frequency/: flake.nix
fortran/sieve/: flake.nix  sieve.f90  sieve.mod
gleam/circular-buffer/: flake.nix
go/acronym/: acronym.go  flake.nix
go/pangram/: pangram.go
go/parallel-letter-frequency/: parallel_letter_frequency.go
javascript/reverse-string/: flake.nix  package-lock.json  reverse-string.js
julia/all-your-base/: all-your-base.jl
julia/allergies/: allergies.jl  runtests.jl
julia/circular-buffer/: circular-buffer.jl  runtests.jl
julia/difference-of-squares/: difference-of-squares.jl
julia/leap/: HELP.md  leap.jl
julia/luhn/: luhn.jl
julia/minesweeper/: minesweeper.jl  runtests.jl
julia/pangram/: pangram.jl
julia/raindrops/: raindrops.jl
julia/reverse-string/: HELP.md  reverse-string.jl
julia/roman-numerals/: roman-numerals.jl
julia/scrabble-score/: scrabble-score.jl
julia/sieve/: README.md  sieve.jl
nim/allergies/: flake.nix
prolog/zebra-puzzle/: flake.nix  zebra_puzzle.pl
python/leap/: flake.nix  justfile  leap.py  pyproject.toml
python/leap/.exercism/: metadata.json
r/hello-world/: flake.nix
r/raindrops/: raindrops.R
ruby/dnd-character/: dnd_character.rb  flake.nix
scala/circular-buffer/: build.sbt
scala/hello-world/: flake.nix
scheme/scrabble-score/: flake.nix  scrabble-score.scm
tcl/acronym/: acronym.tcl  flake.nix
typescript/hello-world/: .pnp.cjs
typescript/list-ops/: .pnp.cjs  list-ops.test.ts  list-ops.ts
(+63 files in other folders)
